k8s/eks/04-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: marrow-ns

spec:
  selector:
    app: marrow-fe

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173  # container Port
      nodePort: 30001   
  type: NodePort
