k8s/eks/08-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: marrow-ns

spec:
  selector:
    app: marrow-be

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000  # container Port
